[package]
name = "TurboRipent"
authors = ["Outerbeast"]
version = "2.0.0"
edition = "2024"
description = "BSP Entity ripping tool"

[dependencies]
dialoguer = "0.12.0"
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }
ctrlc = "3.5.2"
anyhow = "1.0.103"
strum = "0.28.0"
strum_macros = "0.28.0"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
native-windows-gui = { version = "1.0.13", default-features = false, features = ["listbox", "textbox"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
